compiler/tools/fpp-check/test/state_machine/transition_graph/unreachable_node.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/transition_graph/unreachable_node.fpp:5.3
  state T
  ^
error: state T is unreachable
